// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DoubleLineCell > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-double-line-cell"
  >
    <div
      class="mocked-styled-2 el-cell-content"
    >
      <div
        class="mocked-styled-5 el-first-line"
      />
      <div
        class="mocked-styled-6 el-second-line"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DoubleLineCell > should match snapshot with first and second line 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-double-line-cell"
  >
    <div
      class="mocked-styled-2 el-cell-content"
    >
      <div
        class="mocked-styled-5 el-first-line"
      >
        <div
          class="mocked-styled-9 el-table-text"
        >
          <div
            class="mocked-styled-10 el-table-text-container"
          >
            <span
              class="mocked-styled-8 el-table-text-content"
            >
              Alphanumeric value
            </span>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-6 el-second-line"
      >
        <div
          class="mocked-styled-9 el-table-text"
          data-size="extra-small"
        >
          <div
            class="mocked-styled-10 el-table-text-container"
          >
            <span
              class="mocked-styled-8 el-table-text-content"
            >
              Value 23 Jan 2025 4:30 pm Value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DoubleLineCell > should match snapshot with first and second line with icons 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-double-line-cell"
  >
    <div
      class="mocked-styled-2 el-cell-content"
    >
      <div
        class="mocked-styled-5 el-first-line"
      >
        <span
          class="mocked-styled-11 el-icon"
          style="font-size: 1rem;"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            style="font-size: 1rem;"
            title="Icon image with name star"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.2341 13.9495L21.8141 9.8795C22.0176 9.76139 22.1112 9.51746 22.0389 9.2936C21.9667 9.06973 21.7482 8.92648 21.5141 8.9495H14.6241L12.4941 2.4095C12.4463 2.17134 12.2371 2 11.9941 2C11.7512 2 11.542 2.17134 11.4941 2.4095L9.40414 8.9495H2.51414C2.2932 8.94327 2.09438 9.08284 2.02518 9.29275C1.95597 9.50267 2.03281 9.73312 2.21414 9.8595L7.79414 13.9495L5.66414 20.4895C5.59621 20.6958 5.66929 20.9224 5.84498 21.0502C6.02067 21.178 6.25876 21.1777 6.43414 21.0495L12.0141 16.9495L17.5941 21.0095C17.7695 21.1377 18.0076 21.138 18.1833 21.0102C18.359 20.8824 18.4321 20.6558 18.3641 20.4495L16.2341 13.9495Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          class="mocked-styled-9 el-table-text"
        >
          <div
            class="mocked-styled-10 el-table-text-container"
          >
            <span
              class="mocked-styled-8 el-table-text-content"
            >
              Alphanumeric value
            </span>
          </div>
        </div>
        <span
          class="mocked-styled-11 el-icon"
          style="font-size: 1rem;"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            style="font-size: 1rem;"
            title="Icon image with name star"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.2341 13.9495L21.8141 9.8795C22.0176 9.76139 22.1112 9.51746 22.0389 9.2936C21.9667 9.06973 21.7482 8.92648 21.5141 8.9495H14.6241L12.4941 2.4095C12.4463 2.17134 12.2371 2 11.9941 2C11.7512 2 11.542 2.17134 11.4941 2.4095L9.40414 8.9495H2.51414C2.2932 8.94327 2.09438 9.08284 2.02518 9.29275C1.95597 9.50267 2.03281 9.73312 2.21414 9.8595L7.79414 13.9495L5.66414 20.4895C5.59621 20.6958 5.66929 20.9224 5.84498 21.0502C6.02067 21.178 6.25876 21.1777 6.43414 21.0495L12.0141 16.9495L17.5941 21.0095C17.7695 21.1377 18.0076 21.138 18.1833 21.0102C18.359 20.8824 18.4321 20.6558 18.3641 20.4495L16.2341 13.9495Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        class="mocked-styled-6 el-second-line"
      >
        <div
          class="mocked-styled-9 el-table-text"
          data-size="extra-small"
        >
          <div
            class="mocked-styled-10 el-table-text-container"
          >
            <span
              class="mocked-styled-8 el-table-text-content"
            >
              Value 23 Jan 2025 4:30 pm Value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DoubleLineCell > should match snapshot with first and second line with media item 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-double-line-cell"
  >
    <div
      class="mocked-styled-1 el-avatar-content"
    >
      <div
        class="mocked-styled-3 el-media-item-content"
      >
        <span
          class="mocked-styled-12 el-avatar"
          data-colour="default"
          data-shape="circle"
          data-size="medium"
          role="presentation"
        >
          JS
        </span>
      </div>
      <div
        class="mocked-styled-4 el-double-line-content"
      >
        <div
          class="mocked-styled-5 el-first-line"
        >
          <div
            class="mocked-styled-9 el-table-text"
          >
            <div
              class="mocked-styled-10 el-table-text-container"
            >
              <span
                class="mocked-styled-8 el-table-text-content"
              >
                John Smith
              </span>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-6 el-second-line"
        >
          <div
            class="mocked-styled-9 el-table-text"
            data-size="extra-small"
          >
            <div
              class="mocked-styled-10 el-table-text-container"
            >
              <span
                class="mocked-styled-8 el-table-text-content"
              >
                Plumber
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
